# toxic-comment-classifier

./: .dvcignore  .env.example  .flake8  .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-serve.txt  requirements-train.txt
.dvc/: config
data/raw/: sample_submission.csv.dvc
notebooks/: 01_eda.ipynb
scripts/: build_bilstm_vocab.py  build_processed_data.py  build_tfidf_features.py  train_bilstm.py  train_distilbert.py  train_logreg.py
src/toxic_clf/: bilstm_model.py  config.py  data.py  datasets_bilstm.py  datasets_transformer.py  features_tfidf.py  metrics.py  mlflow_utils.py  preprocessing.py  train_bilstm.py  train_distilbert.py  train_logreg.py  vocab.py
src/toxic_clf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bilstm.py  test_config.py  test_data.py  test_datasets_bilstm.py  test_datasets_transformer.py  test_features_tfidf.py  test_metrics.py  test_mlflow_utils.py  test_preprocessing.py  test_train_distilbert.py  test_train_logreg.py  test_vocab.py
