[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toxic_clf"
version = "0.1.0"
description = "Multilabel toxic comment classification - MLOps portfolio project"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
